force-app/main/default/objects/Reviewer__c/fields/Assigned_Abstracts__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Abstracts__c</fullName>
    <label>Assigned Abstracts</label>
    <summaryForeignKey>Abstract_Review__c.Reviewer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>