force-app/main/default/objects/Reviewer__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <formula>IF(ISPICKVAL(Review_Capacity__c, &quot;0-100&quot;), 100, 
 IF(ISPICKVAL(Review_Capacity__c, &quot;100-200&quot;), 200, 
  IF(ISPICKVAL(Review_Capacity__c, &quot;200-300&quot;), 300, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>