force-app/main/default/objects/Reviewer__c/fields/Remaining_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Capacity__c</fullName>
    <formula>Capacity__c -  Assigned_Abstracts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>