force-app/main/default/objects/Reviewer__c/fields/Review_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Review_Capacity__c</fullName>
    <label>Review Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-100</fullName>
            </value>
            <value>
                <fullName>100-200</fullName>
            </value>
            <value>
                <fullName>200-300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>