force-app/main/default/objects/Reviewer__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Topics_of_interest</valueSetName>
    </valueSet>
</CustomField>