force-app/main/default/objects/Reviewer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Event__c</columns>
    <columns>Review_Capacity__c</columns>
    <columns>Topics__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>