force-app/main/default/objects/Reviewer__c/listViews/All_Reviewers.listView-meta.xml
<ListView>
    <fullName>All_Reviewers</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Event__c</columns>
    <columns>Review_Capacity__c</columns>
    <columns>Status__c</columns>
    <columns>Topics__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Reviewers</label>
</ListView>