force-app/main/default/objects/Reviewer__c/listViews/My_Review_Assignment.listView-meta.xml
<ListView>
    <fullName>My_Review_Assignment</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Event__c</columns>
    <columns>Review_Capacity__c</columns>
    <columns>Topics__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accpeted</value>
    </filters>
    <label>My Review Assignment</label>
</ListView>