force-app/main/default/objects/Reviewer__c/listViews/Potential_Reviewers.listView-meta.xml
<ListView>
    <fullName>Potential_Reviewers</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Event__c</columns>
    <columns>Review_Capacity__c</columns>
    <columns>Topics__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Capacity__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Topics__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Potential Reviewers</label>
</ListView>