force-app/main/default/objects/Reviewer__c/listViews/Reviewers_Congress_2020.listView-meta.xml
<ListView>
    <fullName>Reviewers_Congress_2020</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Event__c</columns>
    <columns>Review_Capacity__c</columns>
    <columns>Topics__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <label>Reviewers Congress 2020</label>
</ListView>